---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TABLE like_constraint_rename_cache (LIKE constraint_rename_cache INCLUDING ALL);
---
Parse {
    cst: SourceFile@0..87
      CreateStmt@0..87
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Table@7..12 "TABLE"
        Whitespace@12..13 " "
        RangeVar@13..41
          Ident@13..41 "like_constraint_renam ..."
        Whitespace@41..42 " "
        Ascii40@42..43 "("
        TableLikeClause@43..85
          Like@43..47 "LIKE"
          Whitespace@47..48 " "
          RangeVar@48..71
            Ident@48..71 "constraint_rename_cache"
          Whitespace@71..72 " "
          Including@72..81 "INCLUDING"
          Whitespace@81..82 " "
          All@82..85 "ALL"
        Ascii41@85..86 ")"
        Ascii59@86..87 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "like_constraint_rename_cache",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 13,
                        },
                    ),
                    table_elts: [
                        Node {
                            node: Some(
                                TableLikeClause(
                                    TableLikeClause {
                                        relation: Some(
                                            RangeVar {
                                                catalogname: "",
                                                schemaname: "",
                                                relname: "constraint_rename_cache",
                                                inh: true,
                                                relpersistence: "p",
                                                alias: None,
                                                location: 48,
                                            },
                                        ),
                                        options: 2147483647,
                                        relation_oid: 0,
                                    },
                                ),
                            ),
                        },
                    ],
                    inh_relations: [],
                    partbound: None,
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [],
                    oncommit: OncommitNoop,
                    tablespacename: "",
                    access_method: "",
                    if_not_exists: false,
                },
            ),
            range: 0..86,
        },
    ],
}
